# game-engine-2d

./: .gitignore  CMakeLists.txt
res/shaders/: batch_quad.frag  batch_quad.vert  default.vert
shaders/: batch_quad.frag  batch_quad.vert  default.frag
src/: main.c
src/engine/: animation.c  animation.h  config.c  config.h  global.c  global.h  input.c  input.h  list.c  list.h  time.c  time.h  types.h  utils.h  weapons.c  weapons.h
src/engine/animation/: animation.c  animation.h
src/engine/audio/: audio.c  audio.h
src/engine/entities/: entities.c  entities.h
src/engine/input/: input.c  input.h
src/engine/io/: io.c  io.h
src/engine/physics/: physics.c  physics.h
src/engine/renderer/: renderer.c  renderer.h  renderer_internal.c  renderer_internal.h  renderer_utils.c
src/include/glad/: glad.h
